--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Geist", 'Work Sans', Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
